; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_layer3.c_init_layer3_gainpow2.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_layer3.c_init_layer3_gainpow2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gainpow2 = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @init_layer3_gainpow2(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 210
  %7 = sitofp i32 %6 to double
  %8 = fmul double -2.500000e-01, %7
  %9 = call i32 @pow(double 2.000000e+00, double %8)
  %10 = load i32, i32* %4, align 4
  %11 = add nsw i32 %10, 256
  %12 = call i32 @DOUBLE_TO_REAL_SCALE_LAYER3(i32 %9, i32 %11)
  ret i32 %12
}

declare dso_local i32 @DOUBLE_TO_REAL_SCALE_LAYER3(i32, i32) #1

declare dso_local i32 @pow(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
